# ThesorTeX

./: .bazelignore  .editorconfig  .gitignore  BUILD.bazel  CHANGELOG.md  CHANGELOG_CV_TEMPLATE.md  CHANGELOG_THESIS_TEMPLATE.md  CHANGELOG_THESIS_TOOL.md  CHANGELOG_TOOL.md  MODULE.bazel  README.md  ThesorTeX.config.ini  VERSIONS  WORKSPACE  WORKSPACE.bazel  bazel-ThesorTeX  bazel-bin  bazel-out  bazel-testlogs  build.sh  go.mod  go.sum  nogo_config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  show_all_outputs.bzl  test.sh
backend/app/cmd/: BUILD.bazel  main.go
backend/pkg/handler_chain/: BUILD.bazel  handler_chain.go
backend/pkg/romannumerals/: BUILD.bazel
backend/website/cmd/: BUILD.bazel  main.go
bazel/documentationbuilder/: BUILD.bazel  documentation_builder.bzl  documentation_de.md  test.go
cmd/app/: BUILD.bazel  main.go
domain/backend/: BUILD.bazel  backend.go
domain/static_content/: BUILD.bazel
e2e_tests/: BUILD.bazel  cucumber.json  package.json  playwright.bzl  test.setup.ts
e2e_tests/features/app/: start_page.feature
e2e_tests/helpers/: getFullUri.ts
e2e_tests/src/features/app/: start_page.feature  t02_project_page.feature  t03_entry_editor.feature  t04_category_editor.feature
e2e_tests/src/helpers/: waitForAnimations.ts
e2e_tests/src/step_definitions/app/: AppbarSteps.ts  CategoryPageSteps.ts  EntryPageSteps.ts  OverviewPageSteps.ts  ProjectPageSteps.ts
e2e_tests/src/step_definitions/browser/: BrowserSteps.ts
e2e_tests/src/step_definitions/common/: common.ts
e2e_tests/src/step_definitions/sidebar/: SidebarAssertionSteps.ts
frontend/assets/: BUILD.bazel  assets.go
internal/backend/: BUILD.bazel  backend.go
pkg/backend/cv_template/: BUILD.bazel  documentation_de.md  documentation_en.md
pkg/backend/faviconhandler/: BUILD.bazel  favicon_handler.go  favicon_handler_test.go
pkg/backend/lambda/: BUILD.bazel  lambda.go  response_writer.go
pkg/backend/log/: BUILD.bazel  log.go  log_test.go
pkg/backend/pathbuilder/: BUILD.bazel
pkg/backend/project_template/: BUILD.bazel  documentation.md  documentation_de.md  documentation_en.md
pkg/backend/project_template/template/: abbreviations.csv  abkuerzungen.csv  main.tex
pkg/backend/project_template/template/styPackages/: abbreviations.sty  bibliography.sty  footer.sty  header_footer.sty  headings.sty  inhaltsverzeichnis.sty  table_of_contents.sty
pkg/backend/semver/: BUILD.bazel  semver.go  semver_test.go
pkg/backend/tex_escaping/: BUILD.bazel  tex_escaping.go  tex_escaping_test.go
pkg/backend/versionhandler/: BUILD.bazel  version_handler.go  version_handler_test.go
pkg/frontend/vue-component-library/: BUILD.bazel  package.json  tsconfig.json  vite.config.ts  vuetify.test.config.ts
pkg/frontend/vue-component-library/.storybook/: StoryWrapper.vue  main.ts  preview.ts  withVuetifyTheme.decorator.ts
pkg/frontend/vue-component-library/src/: index.ts
pkg/frontend/vue-component-library/src/components/: index.ts
pkg/frontend/vue-component-library/src/stories/: Button.vue  Header.vue  Page.stories.js
pkg/frontend/vue-component-library/stories/: Button.stories.ts  Header.stories.js  Page.stories.ts
pkg/frontend/vue-component-library/stories/examples/: Header.stories.ts
pkg/handler_chain/: BUILD.bazel  handler_chain.go
pkg/static_content/: BUILD.bazel
tests/e2e/: BUILD.bazel  cucumber.json  package.json  playwright.config.ts  run_playwright.bzl  run_playwright_cucumber.bzl  tsconfig.json  vite.config.ts
tests/e2e/features/accessibility/thesisTool/: t01_start_page.feature  t02_project_page.feature
tests/e2e/features/accessibility/website/: t01_start_page.feature  t02_downloads_page.feature  t03_tutorials_page.feature
tests/e2e/features/app/: t03_entry_editor.feature
tests/e2e/features/thesisTool/: t01_start_page.feature  t02_project_page.feature  t03_entry_editor.feature  t04_category_editor.feature  t05_config_dialog.feature
tests/e2e/features/website/: t01_start_page.feature  t02_downloads_page.feature  t03_tutorials_page.feature
tests/e2e/src/: test.setup.ts  types.ts
tests/e2e/src/features/app/: t01_start_page.feature
tests/e2e/src/helpers/: getFullUri.ts  startup.ts  waitForAnimations.ts
tests/e2e/src/helpers/a11yTree/: a11yTree.ts  nodesToA11yTree.test.ts  nodesToA11yTree.ts  orderNodes.test.ts  orderNodes.ts  types.ts
tests/e2e/src/hooks/: global-setup.ts  global-teardown.ts
tests/e2e/src/step_definitions/app/: AppbarSteps.ts  CategoryPageSteps.ts  ConfigDialogSteps.ts  EntryPageSteps.ts  OverviewPageSteps.ts  ProjectPageSteps.ts
tests/e2e/src/step_definitions/browser/: BrowserSteps.ts
tests/e2e/src/step_definitions/common/: accessibility.ts  common.ts
tests/e2e/src/step_definitions/website/: WebsiteSteps.ts
tests/e2e/src/visual/: playwright-visual.config.ts  setup.ts  teardown.ts
tests/e2e/tests/a11ytree/: test.test.ts
tests/playwright/: .gitignore  BUILD.bazel  package.json  playwright.config.ts  tsconfig.json
tests/playwright/src/a11yTree/: a11yTree.ts  nodesToA11yTree.test.ts  orderNodes.ts
tests/playwright/tests/: example.spec.ts
tests/playwright/tests/website_a11y_tree/: website.spec.ts
tests/playwright/tools/getA11yTree/: recordA11yTree.sh
tools/documentationbuilder/: BUILD.bazel  main.go
tools/documentationbuilder/example/: BUILD.bazel
tools/documentationbuilder/parser/: BUILD.bazel  generate_tex.go  generate_tex_test.go  md_for_vuetify.go  parse_doc_bodies.go  parse_doc_bodies_test.go  split_docs.go  split_docs_test.go  tex_for_template.go
tools/documentationbuilder/pdflatex/: BUILD.bazel  pdflatex.sh
tools/documentationbuilder/testfiles/: BUILD.bazel  simple.md  withCode.md  withFootnote.md  withImage.md  withLink.md  withLinks.md
tools/documentationcombinator/: BUILD.bazel  main.go
tools/documentationcombinator/builder/: BUILD.bazel  combine_docs.go
tools/documentationcombinator/pdflatex/: BUILD.bazel  pdflatex.sh
tools/releasenotes/: BUILD.bazel  main.go
tools/releasenotes/parser/: BUILD.bazel  get_releavnt_notes.go  get_relevant_notes_test.go  get_versions.go  get_versions_test.go
(+1204 files in other folders)
