load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "TOOLS_NOGO", "nogo")

# gazelle:prefix github.com/TimoSto/ThesorTeX
gazelle(
    name = "gazelle",
    external = "vendored",
)

# TODO add buildifier back

# nogo for checking of go standards (kind of like linting)
nogo(
    name = "my_nogo",
    config = "nogo_config.json",
    visibility = ["//visibility:public"],
    deps = TOOLS_NOGO,
)

# for formatting

# link npm packages in global
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

filegroup(
    name = "notes_srcs",
    srcs = [
        "CHANGELOG_CV_TEMPLATE.md",
        "CHANGELOG_THESIS_TEMPLATE.md",
        "CHANGELOG_THESIS_TOOL.md",
        "VERSIONS",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "release_notes_app",
    srcs = [":notes_srcs"],
    outs = [
        "ThesisTool.md",
    ],
    cmd = "./$(location //tools/releasenotes:releasenotes) -target=THESIS_TOOL > \"$@\"",
    tools = ["//tools/releasenotes"],
)

genrule(
    name = "release_notes_template",
    srcs = [":notes_srcs"],
    outs = [
        "ThesisTemplate.md",
    ],
    cmd = "./$(location //tools/releasenotes:releasenotes) -target=THESIS_TEMPLATE > \"$@\"",
    tools = ["//tools/releasenotes"],
)

genrule(
    name = "release_notes_cv_template",
    srcs = [":notes_srcs"],
    outs = [
        "CVTemplate.md",
    ],
    cmd = "./$(location //tools/releasenotes:releasenotes) -target=CV_TEMPLATE > \"$@\"",
    tools = ["//tools/releasenotes"],
)
