module(
    name = "thesortex",
)

# go dependencies
bazel_dep(name = "rules_go", version = "0.47.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")

# go version
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.21.5")

# nogo TODO: enable!!!!
# go_sdk.nogo(nogo = "//:my_nogo")

# rules_pkg
bazel_dep(name = "rules_pkg", version = "0.10.1")