load(":playwright.bzl", "playwright_test")
load("@pnpm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

#playwright_test(
#    name = "app_fake",
#    data = [
#        "//services/app/cmd/e2e",
#    ],
#    debug = False,
#    service = "app",
#    sut_executable = "../services/app/cmd/e2e/e2e_/e2e",
#    tags = ["exclusive"],
#)
