load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "app_lib",
    srcs = ["main.go"],
    importpath = "github.com/TimoSto/ThesorTeX/cmd/app",
    visibility = ["//visibility:private"],
    deps = ["//domain/backend"],
)

go_binary(
    name = "app",
    embed = [":app_lib"],
    visibility = ["//visibility:public"],
)
