load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "backend",
    srcs = ["backend.go"],
    importpath = "github.com/TimoSto/ThesorTeX/domain/backend",
    visibility = ["//visibility:public"],
    deps = [
        "//domain/static_content",
        "//pkg/server",
    ],
)
