load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "static_content",
    srcs = ["static_content.go"],
    embedsrcs = [
        "static/images/index/toc.png",
        "static/images/index/cv.png",
        "static/downloads/cv/curriculumVitae.pdf",
        "static/downloads/cv/curriculumVitae.tex",
        "static/downloads/cv/jacky.jpg",
        "static/downloads/cvTemplate.zip",
        "static/downloads/project/example.tex",
        "static/downloads/project/literatur_template.csv",
        "static/downloads/project/literature_types.json",
        "static/downloads/project/styPackages/abk_verzeichnis.sty",
        "static/downloads/project/styPackages/anhang.sty",
        "static/downloads/project/styPackages/codes.sty",
        "static/downloads/project/styPackages/fusszeilen.sty",
        "static/downloads/project/styPackages/header_footer.sty",
        "static/downloads/project/styPackages/html.sty",
        "static/downloads/project/styPackages/inhaltsverzeichnis.sty",
        "static/downloads/project/styPackages/literatur.sty",
        "static/downloads/project/styPackages/ueberschriften.sty",
        "static/downloads/projectTemplate.zip",
    ],
    importpath = "github.com/TimoSto/ThesorTeX/domain/static_content",
    visibility = ["//visibility:public"],
    deps = ["//pkg/server"],
)
