load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "assets",
    srcs = ["assets.go"],
    embedsrcs = [
        "dist/app/index.html",
        "dist/assets/VMain.d6216866.css",
        "dist/assets/VSpacer.b087327d.css",
        "dist/assets/i18n.582324c8.css",
        "dist/assets/index.a7c78879.css",
        "dist/assets/materialdesignicons-webfont.48d3eec6.woff",
        "dist/assets/materialdesignicons-webfont.861aea05.eot",
        "dist/assets/materialdesignicons-webfont.bd725a7a.ttf",
        "dist/assets/materialdesignicons-webfont.e52d60f6.woff2",
        "dist/assets/roboto-latin-100.12823d58.woff2",
        "dist/assets/roboto-latin-100.c4ead4de.woff",
        "dist/assets/roboto-latin-100italic.26c91ea4.woff2",
        "dist/assets/roboto-latin-100italic.5a3a9840.woff",
        "dist/assets/roboto-latin-300.29f6da0a.woff2",
        "dist/assets/roboto-latin-300.76b05400.woff",
        "dist/assets/roboto-latin-300italic.0be0ae6e.woff",
        "dist/assets/roboto-latin-300italic.9e02524e.woff2",
        "dist/assets/roboto-latin-400.48c3fa6f.woff2",
        "dist/assets/roboto-latin-400.c1dc87f9.woff",
        "dist/assets/roboto-latin-400italic.401e6c25.woff2",
        "dist/assets/roboto-latin-400italic.80815efe.woff",
        "dist/assets/roboto-latin-500.24369e1b.woff2",
        "dist/assets/roboto-latin-500.ba98f991.woff",
        "dist/assets/roboto-latin-500italic.6f2974a3.woff",
        "dist/assets/roboto-latin-500italic.8688b620.woff2",
        "dist/assets/roboto-latin-700.806ea46c.woff",
        "dist/assets/roboto-latin-700.b4d07892.woff2",
        "dist/assets/roboto-latin-700italic.5cc2e477.woff2",
        "dist/assets/roboto-latin-700italic.eec14260.woff",
        "dist/assets/roboto-latin-900.e8586f9d.woff",
        "dist/assets/roboto-latin-900.edcdf3f6.woff2",
        "dist/assets/roboto-latin-900italic.6a80d9cb.woff",
        "dist/assets/roboto-latin-900italic.95e60b93.woff2",
        "dist/auth/index.html",
        "dist/favicon.ico",
        "dist/index.html",
        "dist/info/index.html",
        "dist/logo.svg",
        "dist/thesis.svg",
        "dist/assets/VMain.2d4e4076.js",
        "dist/assets/VSpacer.f931216d.js",
        "dist/assets/app.d0b7f298.js",
        "dist/assets/auth.10b7165d.js",
        "dist/assets/i18n.b0521834.js",
        "dist/assets/index.68d89778.css",
        "dist/assets/info.cad0d056.js",
        "dist/assets/website.b51a470b.js",
    ],
    importpath = "github.com/TimoSto/ThesorTeX/frontend/assets",
    visibility = ["//visibility:public"],
)
