load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "handler_chain",
    srcs = ["handler_chain.go"],
    importpath = "github.com/TimoSto/ThesorTeX/pkg/handler_chain",
    visibility = ["//visibility:public"],
    deps = ["@com_github_justinas_alice//:go_default_library"],
)
