load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//tests/e2e:@cucumber/cucumber/package_json.bzl", cucmber_bin = "bin")
load(":run_playwright_cucumber.bzl", "run_playwright_cucumber")
load("//:bazel/cucumber/cucumber.bzl", "run_cucumber")

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "playwright_base_deps",
    srcs = [
        ":node_modules/@playwright/test",
        ":node_modules/playwright",
        "tsconfig.json",
        "src/test.setup.ts",
        "src/types.ts",
        "src/step_definitions/common/common.ts"
    ] + glob([
        "src/helpers/*.ts",
        "src/step_definitions/browser/*.ts",
    ])
)

filegroup(
    name = "playwright_a11y_deps",
    srcs = [
        ":node_modules/@axe-core/playwright",
        "src/step_definitions/common/accessibility.ts"
    ]
)

filegroup(
    name = "playwright_app_steps",
    srcs = glob([
        "src/step_definitions/app/*.ts",
        "src/step_definitions/sidebar/*.ts"
    ])
)

run_cucumber(
    name = "thesisTool",
    workingDir = package_name(),
    sut_executable_target = "//services/thesisTool/cmd/e2e",
    sut_executable = "../../services/thesisTool/cmd/e2e/e2e_/e2e",
    sut_port = "8441",
    system_base_url = "http://localhost:8441",
    test_files = glob([
        "features/thesisTool/*.feature"
    ]),
    specific_deps = [
        ":playwright_app_steps",
    ]
)

run_cucumber(
    name = "thesisTool_a11y",
    workingDir = package_name(),
    sut_executable_target = "//services/thesisTool/cmd/e2e",
    sut_executable = "../../services/thesisTool/cmd/e2e/e2e_/e2e",
    sut_port = "8441",
    system_base_url = "http://localhost:8441",
    test_files = glob([
        "features/accessibility/thesisTool/*.feature"
    ]),
    specific_deps = [
        ":playwright_app_steps",
        ":playwright_a11y_deps",
    ]
)

# functional tests

run_playwright_cucumber(
    name = "website",
    data = [
        "//services/website/cmd/e2e",
    ],
    executable = "../../services/website/cmd/e2e/e2e_/e2e",
    port = "8443",
    sbu = "http://localhost:8443",
    target = "website",
)

# accessibility tests

run_playwright_cucumber(
    name = "thesisTool_Accessibility",
    data = [
        "//services/thesisTool/cmd/e2e",
    ],
    executable = "../../services/thesisTool/cmd/e2e/e2e_/e2e",
    port = "8442",
    sbu = "http://localhost:8442",
    target = "accessibility/thesisTool",
)

run_playwright_cucumber(
    name = "website_Accessibility",
    data = [
        "//services/website/cmd/e2e",
    ],
    executable = "../../services/website/cmd/e2e/e2e_/e2e",
    port = "8444",
    sbu = "http://localhost:8444",
    target = "accessibility/website",
)
