load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//tests/e2e:@cucumber/cucumber/package_json.bzl", cucmber_bin = "bin")
load("//:bazel/cucumber/cucumber.bzl", "run_cucumber", "run_cucumber_a11y")

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "playwright_base_deps",
    srcs = [
        "src/step_definitions/common/common.ts",
        "src/test.setup.ts",
        "src/types.ts",
        "tsconfig.json",
        ":node_modules/@playwright/test",
        ":node_modules/@thesortex/a11ytree",
        ":node_modules/playwright",
    ] + glob([
        "src/helpers/**/*.ts",
        "src/step_definitions/browser/*.ts",
    ]),
)

filegroup(
    name = "playwright_a11y_deps",
    srcs = [
        "src/step_definitions/common/accessibility.ts",
        ":node_modules/@axe-core/playwright",
    ],
)

filegroup(
    name = "playwright_app_steps",
    srcs = glob([
        "src/step_definitions/app/*.ts",
        "src/step_definitions/sidebar/*.ts",
    ]),
)

filegroup(
    name = "playwright_website_steps",
    srcs = glob([
        "src/step_definitions/website/*.ts",
    ]),
)

# thesisTool

run_cucumber(
    name = "thesisTool",
    specific_deps = [
        ":playwright_app_steps",
    ],
    sut_executable = "../../services/thesisTool/cmd/e2e/e2e_/e2e",
    sut_executable_target = "//services/thesisTool/cmd/e2e",
    sut_port = "8441",
    system_base_url = "http://localhost:8441",
    test_files = glob([
        "features/thesisTool/*.feature",
    ]),
    workingDir = package_name(),
)

run_cucumber_a11y(
    name = "thesisTool_a11y",
    specific_deps = [
        ":playwright_app_steps",
    ],
    sut_executable = "../../services/thesisTool/cmd/e2e/e2e_/e2e",
    sut_executable_target = "//services/thesisTool/cmd/e2e",
    sut_port = "8442",
    system_base_url = "http://localhost:8442",
    test_files = glob([
        "features/accessibility/thesisTool/*.feature",
    ]),
    workingDir = package_name(),
)

# website

run_cucumber(
    name = "website",
    specific_deps = [
        ":playwright_website_steps",
    ],
    sut_executable = "../../services/website/cmd/e2e/e2e_/e2e",
    sut_executable_target = "//services/website/cmd/e2e",
    sut_port = "8443",
    system_base_url = "http://localhost:8443",
    test_files = glob([
        "features/website/*.feature",
    ]),
    workingDir = package_name(),
)

run_cucumber_a11y(
    name = "website_a11y",
    specific_deps = [
        ":playwright_website_steps",
    ],
    sut_executable = "../../services/website/cmd/e2e/e2e_/e2e",
    sut_executable_target = "//services/website/cmd/e2e",
    sut_port = "8444",
    system_base_url = "http://localhost:8444",
    test_files = glob([
        "features/accessibility/website/t01_start_page.feature",
    ]),
    workingDir = package_name(),
)
