load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "documentationbuilder_lib",
    srcs = ["main.go"],
    importpath = "github.com/TimoSto/ThesorTeX/tools/documentationbuilder",
    visibility = ["//visibility:private"],
    deps = ["//tools/documentationbuilder/parser"],
)

go_binary(
    name = "documentationbuilder",
    embed = [":documentationbuilder_lib"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "test",
    outs = ["outs"],
    srcs = ["testfiles/simple.md"],
    cmd = "mkdir $(OUTS) && $(location :documentationbuilder) -out-dir=$(location outs) -src=$(location testfiles/simple.md)",
    tools = [":documentationbuilder"],
)
