load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "documentationcombinator_lib",
    srcs = ["main.go"],
    importpath = "github.com/TimoSto/ThesorTeX/tools/documentationcombinator",
    visibility = ["//visibility:private"],
    deps = ["//tools/documentationcombinator/builder"],
)

go_binary(
    name = "documentationcombinator",
    embed = [":documentationcombinator_lib"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "template_pdf",
    srcs = ["//tools/documentationbuilder:template_srcs"],
    outs = ["template.pdf"],
    cmd = "$(location //tools/documentationcombinator/pdflatex:pdflatex.sh) main.tex $(locations //tools/documentationbuilder:template_srcs) ../../documentationcombinator/ template.pdf",
    tools = ["//tools/documentationcombinator/pdflatex:pdflatex.sh"],
)

genrule(
    name = "test",
    srcs = [
        "//tools/documentationbuilder:test",
        "//tools/documentationbuilder:simpleWithCode",
    ],
    outs = ["docs"],
    cmd = "mkdir $(OUTS) && $(location :documentationcombinator) -out-dir=$(location docs) -docs=$(location //tools/documentationbuilder:test),$(location //tools/documentationbuilder:simpleWithCode)",
    tools = [":documentationcombinator"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "test_template_pdf",
    srcs = [":test"],
    outs = ["test_template.pdf"],
    cmd = "$(location //tools/documentationcombinator/pdflatex:pdflatex.sh) main.tex $(locations :test) ../ test_template.pdf",
    tools = ["//tools/documentationcombinator/pdflatex:pdflatex.sh"],
)

genrule(
    name = "test_img",
    srcs = [
        "//tools/documentationbuilder:test",
        "//tools/documentationbuilder:simpleWithImage",
        "//tools/documentationbuilder/testfiles:test_images",
    ],
    outs = ["docs2"],
    cmd = "mkdir $(OUTS) && mkdir $(OUTS)/images && tar -C $(OUTS)/images -zxf $(location //tools/documentationbuilder/testfiles:test_images) &&  $(location :documentationcombinator) -out-dir=$(location docs2) -docs=$(location //tools/documentationbuilder:test),$(location //tools/documentationbuilder:simpleWithImage)",
    tools = [":documentationcombinator"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "test_img_pdf",
    srcs = [":test_img"],
    outs = ["test_img.pdf"],
    cmd = "$(location //tools/documentationcombinator/pdflatex:pdflatex.sh) main.tex $(locations :test_img) ../ test_img.pdf",
    tools = ["//tools/documentationcombinator/pdflatex:pdflatex.sh"],
)
