load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "releasenotes_lib",
    srcs = ["main.go"],
    importpath = "github.com/TimoSto/ThesorTeX/tools/releasenotes",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/backend/pathbuilder",
        "//tools/releasenotes/parser",
    ],
)

go_binary(
    name = "releasenotes",
    embed = [":releasenotes_lib"],
    data = [
        "//:notes_srcs"
    ],
    visibility = ["//visibility:public"],
)
