load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "releasenotes_lib",
    srcs = ["main.go"],
    importpath = "github.com/TimoSto/ThesorTeX/tools/releasenotes",
    visibility = ["//visibility:private"],
    deps = ["//tools/releasenotes/parser"],
)

go_binary(
    name = "releasenotes",
    data = [
        "//:notes_srcs",
    ],
    embed = [":releasenotes_lib"],
    visibility = ["//visibility:public"],
)
