load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/TimoSto/ThesorTeX/backend/app/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/app/internal/conf",
        "//backend/app/internal/handlers",
        "//backend/pkg/handler_chain",
        "//backend/pkg/log",
    ],
)

_APP_VERSION = "{APP_VERSION}"

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/TimoSto/ThesorTeX/backend/app/internal/conf.Version": _APP_VERSION,
    },
)
