load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/TimoSto/ThesorTeX/backend/website/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/pkg/handler_chain",
        "//backend/pkg/log",
        "//backend/website/internal/static_content",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
