load("@rules_pkg//:mappings.bzl", "pkg_files", "strip_prefix")
load("@rules_pkg//pkg:pkg.bzl", "pkg_tar", "pkg_zip")

pkg_files(
    name = "srcs",
    srcs = glob(["template/**/*"]),
    strip_prefix = strip_prefix.from_pkg("template"),
    visibility = ["//services:__subpackages__"],
)

pkg_zip(
    name = "template_zip",
    srcs = [
        ":srcs",
    ],
)

genrule(
    name = "documentation_de",
    srcs = [
        "documentation_de.md",
    ],
    outs = ["docs/de"],
    cmd = "mkdir $(OUTS) && $(location //tools/documentationbuilder:documentationbuilder) -out-dir=$(location docs/de) -src=$(location documentation_de.md)",
    tools = ["//tools/documentationbuilder"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "documentation_en",
    srcs = [
        "documentation_en.md",
    ],
    outs = ["docs/en"],
    cmd = "mkdir $(OUTS) && $(location //tools/documentationbuilder:documentationbuilder) -out-dir=$(location docs/en) -src=$(location documentation_en.md)",
    tools = ["//tools/documentationbuilder"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "documentation_tar",
    srcs = [
        ":documentation_de",
        ":documentation_en",
    ],
    extension = "tar.gz",
    strip_prefix = strip_prefix.from_pkg("docs"),
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "documentation_images",
    srcs = ["cv_images/cv_styles.png"],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)
