load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "faviconhandler",
    srcs = ["favicon_handler.go"],
    embedsrcs = ["favicon.svg"],
    importpath = "github.com/TimoSto/ThesorTeX/pkg/backend/faviconhandler",
    visibility = ["//visibility:public"],
)

go_test(
    name = "faviconhandler_test",
    srcs = ["favicon_handler_test.go"],
    embed = [":faviconhandler"],
)
