load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = ["log.go"],
    importpath = "github.com/TimoSto/ThesorTeX/pkg/backend/log",
    visibility = ["//visibility:public"],
)

go_test(
    name = "log_test",
    srcs = ["log_test.go"],
    deps = [":log"],
)
