load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pathbuilder",
    srcs = ["path_builder.go"],
    importpath = "github.com/TimoSto/ThesorTeX/pkg/backend/pathbuilder",
    visibility = ["//visibility:public"],
)

go_test(
    name = "pathbuilder_test",
    srcs = ["path_builder_test.go"],
    embed = [":pathbuilder"],
)
